--- a/ADIN.WPF/Themes/WhiteTheme.xaml
+++ b/ADIN.WPF/Themes/WhiteTheme.xaml
@@ -370,5 +370,11 @@
 
 
     <SolidColorBrush x:Key="deviceStatus.foreground" Color="{StaticResource hmc.color.blue.600}"/>
-    
+
+    <SolidColorBrush x:Key="ComboBoxNormalBorderBrush" Color="{Binding Source={StaticResource hmc.color.layout.divider.default},Path=Color}" />
+    <SolidColorBrush x:Key="ComboBoxNormalBackgroundBrush" Color="{Binding Source={StaticResource hmc.color.content.inverse}, Path=Color}" />
+    <SolidColorBrush x:Key="ComboBoxDisabledForegroundBrush" Color="#888" />
+    <SolidColorBrush x:Key="ComboBoxDisabledBackgroundBrush" Color="#eee" />
+    <SolidColorBrush x:Key="ComboBoxDisabledBorderBrush" Color="#888" />
+
 </ResourceDictionary>
