--- a/ADIN.WPF/App.xaml
+++ b/ADIN.WPF/App.xaml
@@ -29,6 +29,7 @@
                 <ResourceDictionary Source="Themes/CheckBoxStyle.xaml"/>
                 <ResourceDictionary Source="Themes/PropertyGridStyle.xaml"/>
                 <ResourceDictionary Source="Themes/ScrollBarStyle.xaml"/>
+                <ResourceDictionary Source="Themes/ComboBoxStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
