--- a/ADIN.WPF/View/FrameGenCheckerStatusView.xaml
+++ b/ADIN.WPF/View/FrameGenCheckerStatusView.xaml
@@ -9,58 +9,18 @@
                           mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
-        <ResourceDictionary>
-            <converter:LinkStateForegroundConverter x:Key="LinkStateForegroundConverter"/>
-            <converter:MSEForegroundConverter x:Key="MSEForegroundConverter"/>
-            <telerik:Windows8Colors x:Key="Windows8Colors" />
-            <SolidColorBrush x:Key="AccentBrush" Color="{Binding Path=Palette.AccentColor, Source={StaticResource Windows8Colors}}"/>
-            <Style x:Key="BorderSyle" TargetType="{x:Type Border}">
-                <Setter Property="BorderBrush" Value="{StaticResource BorderPrimaryColor}"/>
-                <Setter Property="BorderThickness" Value="1"/>
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="CornerRadius" Value="3"/>
-                <Setter Property="Padding" Value="5"/>
-            </Style>
-
-            <Style x:Key="DeviceBoardNameStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontWeight" Value="ExtraBlack"/>
-                <Setter Property="FontSize" Value="20"/>
-                <Setter Property="HorizontalAlignment" Value="Center"/>
-                <Setter Property="Foreground" Value="{StaticResource Foreground.Color}"/>
-            </Style>
-            <Style x:Key="DeviceSerialNameStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontWeight" Value="DemiBold"/>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="HorizontalAlignment" Value="Center"/>
-                <Setter Property="Foreground" Value="{StaticResource Foreground.Color}"/>
-            </Style>
-            <Style x:Key="BaseLabelStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontSize" Value="13"/>
-                <Setter Property="HorizontalAlignment" Value="Center"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-
-            </Style>
-
-            <Style x:Key="LabelStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource BaseLabelStyle}">
-
-            </Style>
-
-            <Style x:Key="ValueStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource BaseLabelStyle}">
-                <Setter Property="FontSize" Value="18"/>
-                <Setter Property="Foreground" Value="{StaticResource AccentBrush}"/>
-                <Setter Property="FontFamily" Value="Segoe UI Light"/>
-            </Style>
-        </ResourceDictionary>
+        <converter:LinkStateForegroundConverter x:Key="LinkStateForegroundConverter"/>
+        <converter:MSEForegroundConverter x:Key="MSEForegroundConverter"/>
     </UserControl.Resources>
     <Grid>
         <StackPanel>
-            <TextBlock Text="{Binding BoardName}" Style="{StaticResource DeviceBoardNameStyle}"/>
-            <TextBlock Text="{Binding SerialNumber}" Style="{StaticResource DeviceSerialNameStyle}"/>
+            <TextBlock Text="{Binding BoardName}" Style="{StaticResource TextBlockHeader1Style}"/>
+            <TextBlock Text="{Binding SerialNumber}" Style="{StaticResource TextBlockHeader2Style}"/>
 
             <Border Style="{StaticResource BorderSyle}">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Link Status: " Style="{StaticResource LabelStyle}"/>
-                    <TextBlock Text="{Binding LinkStatus}" Style="{StaticResource ValueStyle}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=Text, Converter={StaticResource LinkStateForegroundConverter}}"/>
+                    <TextBlock Text="Link Status: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding LinkStatus}" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=Text, Converter={StaticResource LinkStateForegroundConverter}}"/>
                 </StackPanel>
             </Border>
             <!--<Border Style="{StaticResource BorderSyle}">
@@ -71,20 +31,20 @@
             </Border>-->
             <Border Style="{StaticResource BorderSyle}">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Checker: " Style="{StaticResource LabelStyle}"/>
-                    <TextBlock Text="{Binding Checker}" Style="{StaticResource ValueStyle}"/>
+                    <TextBlock Text="Checker: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding Checker}" Style="{StaticResource DeviceStatusValueStyle}"/>
                 </StackPanel>
             </Border>
             <Border Style="{StaticResource BorderSyle}">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Generator: " Style="{StaticResource LabelStyle}"/>
-                    <TextBlock Text="{Binding Generator}" Style="{StaticResource ValueStyle}"/>
+                    <TextBlock Text="Generator: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding Generator}" Style="{StaticResource DeviceStatusValueStyle}"/>
                 </StackPanel>
             </Border>
             <Border Style="{StaticResource BorderSyle}">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="MSE: " Style="{StaticResource LabelStyle}"/>
-                    <TextBlock Text="{Binding MseValue}" Style="{StaticResource ValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
+                    <TextBlock Text="MSE: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                    <TextBlock Text="{Binding MseValue}" Style="{StaticResource DeviceStatusValueStyle}" Foreground="{Binding Path=Text, RelativeSource={RelativeSource Self},Converter={StaticResource MSEForegroundConverter}}"/>
                 </StackPanel>
             </Border>
         </StackPanel>
