--- a/ADIN.WPF/View/FrameGenCheckerView.xaml
+++ b/ADIN.WPF/View/FrameGenCheckerView.xaml
@@ -48,7 +48,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Column="0" Text="Frame Length" Style="{StaticResource TextBlockstyle}"/>
-                        <TextBox Grid.Column="1" HorizontalAlignment="Right" Text="{Binding ElementName=SliderFrameLength, Path=Value, UpdateSourceTrigger=PropertyChanged}" BorderThickness="0.5" Background="Transparent" Width="50" HorizontalContentAlignment="Center"/>
+                        <TextBox Grid.Column="1" HorizontalAlignment="Right" Text="{Binding ElementName=SliderFrameLength, Path=Value, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1" Background="Transparent" Width="50" HorizontalContentAlignment="Center"/>
                         <telerik:RadSlider Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="0 5 0 0" IsEnabled="{Binding FrameGenRunning}" x:Name="SliderFrameLength" Value="{Binding FrameLength}" Maximum="65500" TickFrequency="50" IsSnapToTickEnabled="True"/>
                     </Grid>
 
@@ -58,7 +58,7 @@
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0" Text="Frame Content" Style="{StaticResource TextBlockstyle}" />
-                        <ComboBox Name="FrameContent" Grid.Row="1" Margin="0 5 0 0" IsEnabled="{Binding FrameGenRunning}" ItemsSource="{Binding FrameContents}" SelectedItem="{Binding SelectedFrameContent}">
+                        <ComboBox Name="FrameContent" Grid.Row="1" Margin="0 5 0 0" IsEnabled="{Binding FrameGenRunning}" ItemsSource="{Binding FrameContents}" SelectedItem="{Binding SelectedFrameContent}" Style="{StaticResource ComboBoxFlatStyle}">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Name}"/>
