--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -53,30 +53,44 @@
                             </Grid.RowDefinitions>
 
                             <TextBlock Grid.Row="0" Grid.Column="0" Text="Advertise 1000BASE-T FD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="{Binding IsAdvertise_1000BASE_T_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"/>
+                            <CheckBox Grid.Row="0" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_1000BASE_T_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                      IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="1" Grid.Column="0" Text="Advertise 1000BASE-T HD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding IsAdvertise_1000BASE_T_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"/>
+                            <CheckBox Grid.Row="1" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_1000BASE_T_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                      IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="2" Grid.Column="0" Text="Advertise 100BASE-TX FD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="{Binding IsAdvertise_100BASE_TX_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <CheckBox Grid.Row="2" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_100BASE_TX_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="3" Grid.Column="0" Text="Advertise 100BASE-TX HD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="3" Grid.Column="1" IsChecked="{Binding IsAdvertise_100BASE_TX_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <CheckBox Grid.Row="3" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_100BASE_TX_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="4" Grid.Column="0" Text="Advertise 10BASE-T FD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="4" Grid.Column="1" IsChecked="{Binding IsAdvertise_10BASE_T_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <CheckBox Grid.Row="4" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_10BASE_T_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="5" Grid.Column="0" Text="Advertise 10BASE-T HD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="5" Grid.Column="1" IsChecked="{Binding IsAdvertise_10BASE_T_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <CheckBox Grid.Row="5" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_10BASE_T_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
 
                 <Grid>
                     <GroupBox Header="EEE Advertisement" Style="{StaticResource GroupBoxStyle}"
-				  Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
-				  Margin="0 0 0 5">
+				              Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
+				              Margin="0 0 0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="220"/>
@@ -87,18 +101,23 @@
                                 <RowDefinition Height="20"/>
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0" Grid.Column="0" Text="Advertise EEE 1000BASE-T: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="{Binding IsAdvertise_EEE_1000BASE_T, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"/>
+                            <CheckBox Grid.Row="0" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_EEE_1000BASE_T, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                      IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="1" Grid.Column="0" Text="Advertise EEE 100BASE-TX: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding IsAdvertise_EEE_100BASE_TX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <CheckBox Grid.Row="1" Grid.Column="1" 
+                                      IsChecked="{Binding IsAdvertise_EEE_100BASE_TX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
 
                 <Grid>
                     <GroupBox Header="Down Speed" Style="{StaticResource GroupBoxStyle}"
-				  Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
-				  Margin="0 0 0 5">
+				              Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
+				              Margin="0 0 0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="220"/>
@@ -110,10 +129,15 @@
                                 <RowDefinition Height="30"/>
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0" Grid.Column="0" Text="100BASE-TX HD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="{Binding IsDownSpeed_100BASE_TX_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"/>
+                            <CheckBox Grid.Row="0" Grid.Column="1" 
+                                      IsChecked="{Binding IsDownSpeed_100BASE_TX_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                      IsEnabled="{Binding IsANAdvertised1GSpeedVisible}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="1" Grid.Column="0" Text="10BASE-T HD: " Style="{StaticResource TextBlockstyle}"/>
-                            <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding IsDownSpeed_10BASE_T_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <CheckBox Grid.Row="1" Grid.Column="1" 
+                                      IsChecked="{Binding IsDownSpeed_10BASE_T_HD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                      Style="{StaticResource CheckBoxStyle}"/>
 
                             <TextBlock Grid.Row="2" Grid.Column="0" Text="Downspeed Retries: " Style="{StaticResource TextBlockstyle}"/>
                             <telerik:RadNumericUpDown Grid.Row="2" Grid.Column="1" Value="{Binding SetDownSpeedRetries}" Minimum="0" Maximum="7" SmallChange="1"  NumberDecimalDigits="0" IsEditable="False" AutoReverse="True"/>
