ADIN1200_Implementation: - added local and remote advertised speeds - added command functionalities for reset buttons

--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -40,6 +40,29 @@
                 </StackPanel>
             </Border>
 
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="3"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+
+                <Border Style="{StaticResource BorderSyle}" Grid.Column="0">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="Local" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                        <telerik:RadListBox Height="183" ItemsSource="{Binding LocalAdvertisedSpeeds}"/>
+                    </StackPanel>
+                </Border>
+
+                <Border Style="{StaticResource BorderSyle}" Grid.Column="2">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="Remote" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                        <telerik:RadListBox Height="183" ItemsSource="{Binding RemoteAdvertisedSpeeds}"/>
+                    </StackPanel>
+                </Border>
+
+            </Grid>
+
         </StackPanel>
 
     </Grid>
