--- a/ADIN.WPF/App.xaml
+++ b/ADIN.WPF/App.xaml
@@ -30,6 +30,7 @@
                 <ResourceDictionary Source="Themes/PropertyGridStyle.xaml"/>
                 <ResourceDictionary Source="Themes/ScrollBarStyle.xaml"/>
                 <ResourceDictionary Source="Themes/ComboBoxStyle.xaml"/>
+                <ResourceDictionary Source="Themes/ListBoxStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
