--- a/ADIN.WPF/App.xaml
+++ b/ADIN.WPF/App.xaml
@@ -31,6 +31,7 @@
                 <ResourceDictionary Source="Themes/ScrollBarStyle.xaml"/>
                 <ResourceDictionary Source="Themes/ComboBoxStyle.xaml"/>
                 <ResourceDictionary Source="Themes/ListBoxStyle.xaml"/>
+                <ResourceDictionary Source="Themes/NumericUpDownStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
